Improve Puzzle print method